<?xml version="1.0"?>
<package>
  <name>ev3_python</name>
  <version>0.0.1</version>
  <description>The ev3_python package</description>

  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>

  <license>BSD</license>

  <author>Yutaka Kondo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
</package>
