<?xml version="1.0"?>
<package>
  <name>ev3_teleop</name>
  <version>0.0.1</version>
  <description>The ev3_teleop package</description>

  <maintainer email="yutaka.kodo@youtalk.jp">Yutaka Kondo</maintainer>

  <license>BSD</license>

  <author>Yutaka Kondo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ev3_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>

  <run_depend>ev3_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
</package>
